# ms-purview-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  PITFALLS.md  README.md  azure.yaml  pyproject.toml
.claude/: settings.local.json
.claude/skills/aca-deployment/: SKILL.md
.claude/skills/project-guidelines/: SKILL.md
.claude/skills/project-guidelines/references/: ado-rules.md  code-examples.md  vocabulary.md
.github/workflows/: dependency-graph.yml  deploy-purview-mcp-aca.yml
infra/: main.bicep  main.parameters.json  resources.bicep
infra/modules/: mcp-jwt-auth.fragment.xml  ms-purview-mcp-api.policy.xml  ms-purview-mcp-apim-api.bicep  ms-purview-mcp-authorize.policy.xml  ms-purview-mcp-oauth-authorization-server.policy.xml  ms-purview-mcp-prm.policy.xml  ms-purview-mcp-register.policy.xml  ms-purview-mcp-token.policy.xml  purview-mcp-api.policy.xml  purview-mcp-apim-api.bicep  purview-mcp-oauth-openid-configuration.policy.xml  purview-mcp-prm.policy.xml
scripts/: pre-commit  pre-push
src/purview_mcp/: auth.py  cache.py  models.py  server.py
src/purview_mcp/client/: purview.py
src/purview_mcp/skills/: discovery.py  glossary.py  lineage.py  policy.py  schema.py  uc_sync.py
tests/: test_cache.py  test_e2e.py  test_unit.py
